[package]
name = "paypal-v2"
version = "0.0.4"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
smart-default = "0.6"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1"
futures = "0.3"

[features]
production = []