[package]
name = "paypal-v2"
version = "0.0.4"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
smart-default = "0.6"
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"

[dependencies.reqwest]
version = "0.11"
default_features = false
features = ["json", "rustls-tls"]